# deno_lz4

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deno.jsonc  mod.ts  test.ts  wasm.js
.github/workflows/: checks.yml  ci.yml
scripts/: build.ts
src/: lib.rs
