[package]
name = "deno_lz4"
description = "lz4 wasm module for deno"
repository = "https://github.com/denosaurs/deno_lz4"
license = "MIT"
version = "0.1.0"
authors = ["Elias SJögreen"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
lz4-compression = "0.6.1"
wasm-bindgen = "0.2.63"
wee_alloc = { version = "0.4.5", optional = true }

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1

[features]
default = ["wee_alloc"]
