[package]
name = "deno_lz4"
description = "lz4 wasm module for deno"
repository = "https://github.com/denosaurs/deno_lz4"
license = "MIT"
version = "0.1.3"
authors = ["Elias SJögreen"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
lz4-compression = "0.7.0"
wasm-bindgen = "0.2.88"

[profile.release]
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[features]
